bad/array_subscript_invalid_type_void.example_compiler_output
ERROR
[1mbad/array_subscript_invalid_type_void.lat:5:7: [1;31merror: [0;1mvalue of non-array type `void` has no subscript operator[m
	foo()[42];
	     [1;32m^[m
